chill kick button

--- a/static/css/_components.scss
+++ b/static/css/_components.scss
@@ -97,6 +97,7 @@ html {
 					margin: 0 8px;
 				}
 				> button {
+					color: $ck3;
 					margin: 0 8px;
 					&:first-child {
 						margin-left: 4px;
