--- a/static/css/main.css
+++ b/static/css/main.css
@@ -512,8 +512,9 @@ html {
     -ms-flex-align: center; }
     /* line 19, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman .nav > input {
+      line-height: 0;
       text-align: right; }
-  /* line 24, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 25, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman .columns {
     display: -webkit-box;
     display: -moz-box;
@@ -523,8 +524,9 @@ html {
     display: -ms-flexbox;
     display: flex;
     padding: 0 4px; }
-    /* line 27, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 28, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman .columns > section {
+      overflow: hidden;
       margin: 0 4px;
       border-radius: 2px;
       box-shadow: rgba(0, 0, 0, 0.12) 0 0 0 1px;
@@ -539,19 +541,17 @@ html {
       -moz-flex-basis: 0;
       flex-basis: 0;
       -ms-flex-preferred-size: 0; }
-      /* line 33, /Users/imogen/git/strawmang/static/css/_components.scss */
+      /* line 35, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .columns > section:empty {
         background-color: #fafafa; }
-      /* line 36, /Users/imogen/git/strawmang/static/css/_components.scss */
+      /* line 38, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .columns > section > header {
         height: 64px;
-        border-top-left-radius: 2px;
-        border-top-right-radius: 2px; }
-      /* line 41, /Users/imogen/git/strawmang/static/css/_components.scss */
+        box-shadow: rgba(0, 0, 0, 0.12) 0 1px; }
+      /* line 42, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .columns > section > footer {
         height: 64px;
-        border-bottom-left-radius: 2px;
-        border-bottom-right-radius: 2px; }
+        box-shadow: rgba(0, 0, 0, 0.12) 0 -1px; }
   /* line 48, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman .chat {
     display: -webkit-box;
@@ -605,15 +605,17 @@ html {
         -ms-flex-align: center; }
         /* line 59, /Users/imogen/git/strawmang/static/css/_components.scss */
         .strawman .chat > header > div > span {
+          position: relative;
+          top: 2px;
           margin: 0 16px; }
-      /* line 64, /Users/imogen/git/strawmang/static/css/_components.scss */
+      /* line 66, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .chat > header > progress {
         width: 100%;
         position: absolute;
         bottom: 0; }
-    /* line 70, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 72, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman .chat > ul {
-      padding: 4px 16px;
+      padding: 0 16px;
       margin: 0;
       list-style-type: none;
       -webkit-box-flex: 1;
@@ -623,17 +625,17 @@ html {
       -moz-flex: 1;
       -ms-flex: 1;
       flex: 1; }
-      /* line 75, /Users/imogen/git/strawmang/static/css/_components.scss */
+      /* line 77, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .chat > ul > li {
         margin: 8px 0; }
-        /* line 79, /Users/imogen/git/strawmang/static/css/_components.scss */
+        /* line 81, /Users/imogen/git/strawmang/static/css/_components.scss */
         .strawman .chat > ul > li > span::after {
           content: "\00a0"; }
-    /* line 85, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 87, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman .chat > footer {
       background-color: #fafafa;
       position: relative; }
-      /* line 88, /Users/imogen/git/strawmang/static/css/_components.scss */
+      /* line 90, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .chat > footer > div {
         height: 100%;
         padding: 0 8px;
@@ -662,8 +664,10 @@ html {
         -o-align-items: center;
         align-items: center;
         -ms-flex-align: center; }
-        /* line 94, /Users/imogen/git/strawmang/static/css/_components.scss */
+        /* line 96, /Users/imogen/git/strawmang/static/css/_components.scss */
         .strawman .chat > footer > div > input {
+          position: relative;
+          top: 1px;
           -webkit-box-flex: 1;
           -moz-box-flex: 1;
           box-flex: 1;
@@ -672,22 +676,22 @@ html {
           -ms-flex: 1;
           flex: 1;
           margin: 0 8px; }
-        /* line 99, /Users/imogen/git/strawmang/static/css/_components.scss */
+        /* line 103, /Users/imogen/git/strawmang/static/css/_components.scss */
         .strawman .chat > footer > div > button {
           color: rgba(0, 0, 0, 0.26);
           margin: 0 8px; }
-          /* line 102, /Users/imogen/git/strawmang/static/css/_components.scss */
+          /* line 106, /Users/imogen/git/strawmang/static/css/_components.scss */
           .strawman .chat > footer > div > button:first-child {
             margin-left: 4px; }
-          /* line 105, /Users/imogen/git/strawmang/static/css/_components.scss */
+          /* line 109, /Users/imogen/git/strawmang/static/css/_components.scss */
           .strawman .chat > footer > div > button:last-child {
             margin-right: 4px; }
-      /* line 110, /Users/imogen/git/strawmang/static/css/_components.scss */
+      /* line 114, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .chat > footer > progress {
         width: 100%;
         position: absolute;
         bottom: 0; }
-  /* line 117, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 121, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman .submit {
     padding: 0 16px;
     background-color: #fafafa;
@@ -726,25 +730,25 @@ html {
     -o-align-items: flex-start;
     align-items: flex-start;
     -ms-flex-align: start; }
-    /* line 124, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 128, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman .submit > div {
       max-width: 100%;
       position: relative; }
-      /* line 127, /Users/imogen/git/strawmang/static/css/_components.scss */
+      /* line 131, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .submit > div > input {
         width: 100%;
         box-sizing: border-box;
         border: none; }
-    /* line 134, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 138, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman .submit > span {
       color: rgba(0, 0, 0, 0.54); }
-  /* line 142, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 146, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman input:focus,
   .strawman select:focus,
   .strawman textarea:focus,
   .strawman button:focus {
     outline: none; }
-  /* line 145, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 149, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman input {
     background-color: transparent;
     border-style: none; }
@@ -764,7 +768,7 @@ html {
     .strawman input:-ms-input-placeholder {
       color: rgba(0, 0, 0, 0.26);
       line-height: initial; }
-  /* line 153, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 157, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman button {
     background: none;
     border: none;
@@ -772,103 +776,43 @@ html {
     line-height: 0;
     color: rgba(0, 0, 0, 0.54);
     padding: 0; }
-    /* line 160, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 164, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman button:hover {
       color: rgba(0, 0, 0, 0.87); }
-    /* line 163, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 167, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman button:active {
       font-size: 23px;
       position: relative;
       margin: .5px; }
-  /* line 169, /Users/imogen/git/strawmang/static/css/_components.scss */
-  .strawman progress::-webkit-progress-inner-element {
+  /* line 173, /Users/imogen/git/strawmang/static/css/_components.scss */
+  .strawman progress {
     -webkit-appearance: none;
     -moz-appearance: none;
     -ms-appearance: none;
     -o-appearance: none;
-    appearance: none; }
-  /* line 169, /Users/imogen/git/strawmang/static/css/_components.scss */
-  .strawman progress::-moz-progress-inner-element {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    -o-appearance: none;
-    appearance: none; }
-  /* line 169, /Users/imogen/git/strawmang/static/css/_components.scss */
-  .strawman progress::-ms-progress-inner-element {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    -o-appearance: none;
-    appearance: none; }
-  /* line 169, /Users/imogen/git/strawmang/static/css/_components.scss */
-  .strawman progress::-o-progress-inner-element {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    -o-appearance: none;
-    appearance: none; }
-  /* line 174, /Users/imogen/git/strawmang/static/css/_components.scss */
+    appearance: none;
+    height: 2px; }
+  /* line 177, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-webkit-progress-bar {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    -o-appearance: none;
-    appearance: none;
     background-color: rgba(0, 0, 0, 0.54); }
-  /* line 174, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 177, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-moz-progress-bar {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    -o-appearance: none;
-    appearance: none;
     background-color: rgba(0, 0, 0, 0.54); }
-  /* line 174, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 177, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-ms-progress-bar {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    -o-appearance: none;
-    appearance: none;
     background-color: rgba(0, 0, 0, 0.54); }
-  /* line 174, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 177, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-o-progress-bar {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    -o-appearance: none;
-    appearance: none;
     background-color: rgba(0, 0, 0, 0.54); }
-  /* line 180, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 182, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-webkit-progress-value {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    -o-appearance: none;
-    appearance: none;
     background-color: #7699d4; }
-  /* line 180, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 182, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-moz-progress-value {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    -o-appearance: none;
-    appearance: none;
     background-color: #7699d4; }
-  /* line 180, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 182, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-ms-progress-value {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    -o-appearance: none;
-    appearance: none;
     background-color: #7699d4; }
-  /* line 180, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 182, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-o-progress-value {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    -o-appearance: none;
-    appearance: none;
     background-color: #7699d4; }
