--- a/static/css/main.css
+++ b/static/css/main.css
@@ -455,6 +455,7 @@ html {
 
 /* line 7, /Users/imogen/git/strawmang/static/css/_components.scss */
 .strawman {
+  color: #292f36;
   height: 100%;
   display: -webkit-box;
   display: -moz-box;
@@ -473,7 +474,7 @@ html {
   -moz-flex-direction: column;
   flex-direction: column;
   -ms-flex-direction: column; }
-  /* line 11, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 12, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman > main {
     -webkit-box-flex: 1;
     -moz-box-flex: 1;
@@ -482,7 +483,7 @@ html {
     -moz-flex: 1;
     -ms-flex: 1;
     flex: 1; }
-  /* line 14, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 15, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman .nav {
     padding: 0 24px;
     display: -webkit-box;
@@ -510,11 +511,11 @@ html {
     -o-align-items: center;
     align-items: center;
     -ms-flex-align: center; }
-    /* line 19, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 20, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman .nav > input {
       line-height: 0;
       text-align: right; }
-  /* line 25, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 26, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman .columns {
     display: -webkit-box;
     display: -moz-box;
@@ -524,7 +525,7 @@ html {
     display: -ms-flexbox;
     display: flex;
     padding: 0 4px; }
-    /* line 28, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 29, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman .columns > section {
       overflow: hidden;
       margin: 0 4px;
@@ -541,18 +542,18 @@ html {
       -moz-flex-basis: 0;
       flex-basis: 0;
       -ms-flex-preferred-size: 0; }
-      /* line 35, /Users/imogen/git/strawmang/static/css/_components.scss */
+      /* line 36, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .columns > section:empty {
         background-color: #fafafa; }
-      /* line 38, /Users/imogen/git/strawmang/static/css/_components.scss */
+      /* line 39, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .columns > section > header {
         height: 64px;
         box-shadow: rgba(0, 0, 0, 0.12) 0 1px; }
-      /* line 42, /Users/imogen/git/strawmang/static/css/_components.scss */
+      /* line 43, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .columns > section > footer {
         height: 64px;
         box-shadow: rgba(0, 0, 0, 0.12) 0 -1px; }
-  /* line 48, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 49, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman .chat {
     display: -webkit-box;
     display: -moz-box;
@@ -571,11 +572,11 @@ html {
     -moz-flex-direction: column;
     flex-direction: column;
     -ms-flex-direction: column; }
-    /* line 51, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 52, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman .chat > header {
       background-color: #fafafa;
       position: relative; }
-      /* line 54, /Users/imogen/git/strawmang/static/css/_components.scss */
+      /* line 55, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .chat > header > div {
         height: 100%;
         display: -webkit-box;
@@ -603,17 +604,20 @@ html {
         -o-align-items: center;
         align-items: center;
         -ms-flex-align: center; }
-        /* line 59, /Users/imogen/git/strawmang/static/css/_components.scss */
+        /* line 60, /Users/imogen/git/strawmang/static/css/_components.scss */
         .strawman .chat > header > div > span {
           position: relative;
           top: 2px;
           margin: 0 16px; }
-      /* line 66, /Users/imogen/git/strawmang/static/css/_components.scss */
+          /* line 65, /Users/imogen/git/strawmang/static/css/_components.scss */
+          .strawman .chat > header > div > span:first-of-type {
+            color: #7699d4; }
+      /* line 70, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .chat > header > progress {
         width: 100%;
         position: absolute;
         bottom: 0; }
-    /* line 72, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 76, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman .chat > ul {
       padding: 0 16px;
       margin: 0;
@@ -625,17 +629,17 @@ html {
       -moz-flex: 1;
       -ms-flex: 1;
       flex: 1; }
-      /* line 77, /Users/imogen/git/strawmang/static/css/_components.scss */
+      /* line 81, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .chat > ul > li {
         margin: 8px 0; }
-        /* line 81, /Users/imogen/git/strawmang/static/css/_components.scss */
+        /* line 85, /Users/imogen/git/strawmang/static/css/_components.scss */
         .strawman .chat > ul > li > span::after {
           content: "\00a0"; }
-    /* line 87, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 91, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman .chat > footer {
       background-color: #fafafa;
       position: relative; }
-      /* line 90, /Users/imogen/git/strawmang/static/css/_components.scss */
+      /* line 94, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .chat > footer > div {
         height: 100%;
         padding: 0 8px;
@@ -664,7 +668,7 @@ html {
         -o-align-items: center;
         align-items: center;
         -ms-flex-align: center; }
-        /* line 96, /Users/imogen/git/strawmang/static/css/_components.scss */
+        /* line 100, /Users/imogen/git/strawmang/static/css/_components.scss */
         .strawman .chat > footer > div > input {
           position: relative;
           top: 1px;
@@ -676,22 +680,22 @@ html {
           -ms-flex: 1;
           flex: 1;
           margin: 0 8px; }
-        /* line 103, /Users/imogen/git/strawmang/static/css/_components.scss */
+        /* line 107, /Users/imogen/git/strawmang/static/css/_components.scss */
         .strawman .chat > footer > div > button {
           color: rgba(0, 0, 0, 0.26);
           margin: 0 8px; }
-          /* line 106, /Users/imogen/git/strawmang/static/css/_components.scss */
+          /* line 110, /Users/imogen/git/strawmang/static/css/_components.scss */
           .strawman .chat > footer > div > button:first-child {
             margin-left: 4px; }
-          /* line 109, /Users/imogen/git/strawmang/static/css/_components.scss */
+          /* line 113, /Users/imogen/git/strawmang/static/css/_components.scss */
           .strawman .chat > footer > div > button:last-child {
             margin-right: 4px; }
-      /* line 114, /Users/imogen/git/strawmang/static/css/_components.scss */
+      /* line 118, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .chat > footer > progress {
         width: 100%;
         position: absolute;
         bottom: 0; }
-  /* line 121, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 125, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman .submit {
     padding: 0 16px;
     background-color: #fafafa;
@@ -730,25 +734,25 @@ html {
     -o-align-items: flex-start;
     align-items: flex-start;
     -ms-flex-align: start; }
-    /* line 128, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 132, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman .submit > div {
       max-width: 100%;
       position: relative; }
-      /* line 131, /Users/imogen/git/strawmang/static/css/_components.scss */
+      /* line 135, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .submit > div > input {
         width: 100%;
         box-sizing: border-box;
         border: none; }
-    /* line 138, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 142, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman .submit > span {
       color: rgba(0, 0, 0, 0.54); }
-  /* line 146, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 150, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman input:focus,
   .strawman select:focus,
   .strawman textarea:focus,
   .strawman button:focus {
     outline: none; }
-  /* line 149, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 153, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman input {
     background-color: transparent;
     border-style: none; }
@@ -768,7 +772,7 @@ html {
     .strawman input:-ms-input-placeholder {
       color: rgba(0, 0, 0, 0.26);
       line-height: initial; }
-  /* line 157, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 161, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman button {
     background: none;
     border: none;
@@ -776,15 +780,15 @@ html {
     line-height: 0;
     color: rgba(0, 0, 0, 0.54);
     padding: 0; }
-    /* line 164, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 168, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman button:hover {
       color: rgba(0, 0, 0, 0.87); }
-    /* line 167, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 171, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman button:active {
       font-size: 23px;
       position: relative;
       margin: .5px; }
-  /* line 173, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 177, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress {
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -792,27 +796,27 @@ html {
     -o-appearance: none;
     appearance: none;
     height: 2px; }
-  /* line 177, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 181, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-webkit-progress-bar {
-    background-color: rgba(0, 0, 0, 0.54); }
-  /* line 177, /Users/imogen/git/strawmang/static/css/_components.scss */
+    background-color: #292f36; }
+  /* line 181, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-moz-progress-bar {
-    background-color: rgba(0, 0, 0, 0.54); }
-  /* line 177, /Users/imogen/git/strawmang/static/css/_components.scss */
+    background-color: #292f36; }
+  /* line 181, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-ms-progress-bar {
-    background-color: rgba(0, 0, 0, 0.54); }
-  /* line 177, /Users/imogen/git/strawmang/static/css/_components.scss */
+    background-color: #292f36; }
+  /* line 181, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-o-progress-bar {
-    background-color: rgba(0, 0, 0, 0.54); }
-  /* line 182, /Users/imogen/git/strawmang/static/css/_components.scss */
+    background-color: #292f36; }
+  /* line 186, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-webkit-progress-value {
     background-color: #7699d4; }
-  /* line 182, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 186, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-moz-progress-value {
     background-color: #7699d4; }
-  /* line 182, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 186, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-ms-progress-value {
     background-color: #7699d4; }
-  /* line 182, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 186, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-o-progress-value {
     background-color: #7699d4; }
